# multipass_desktop

./: README.md  pyproject.toml  setup.cfg  setup.py
src/multipass_desktop/: _widgets.py  app.py  config.ini
src/multipass_desktop/multipass_grpc/: README.md  client.py  multipass_pb2.py  multipass_pb2_grpc.py
