[metadata]
# replace with your username:
name = multipass_desktop-viraj-kanwade
version = 0.0.1
author = Viraj Kanwade
author_email = virajk.oib@gmail.com
description = Desktop interface for Multipass
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/virajkanwade/multipass_desktop
project_urls =
    Bug Tracker = https://github.com/virajkanwade/multipass_desktop/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
scripts =
    bin/multipass_desktop

[options.packages.find]
where = src